Change icons and README.md

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Sellable",
+  "name": "Sellable - App to manage FPS tags.",
   "icons": [
     {
       "src": "favicon.ico",
