--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-popper": "^2.3.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "typescript": "^4.9.4",
     "vienna-ui": "^2.3.7",
     "web-vitals": "^2.1.4"
