--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@szhsin/react-accordion": "^1.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,12 +12,14 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@yudiel/react-qr-scanner": "^1.0.8",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "typescript": "^4.9.4",
     "vienna-ui": "^2.3.7",
     "web-vitals": "^2.1.4"
@@ -27,7 +30,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://158.160.13.158:8000/",
+  "proxy": "http://158.160.29.31:8000/",
   "eslintConfig": {
     "extends": [
       "react-app",
