--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "typescript": "^4.9.4",
-    "typescript-cookie": "^1.0.6",
+    "typescript-cookie": "1.0.4",
     "vienna-ui": "^2.3.7",
     "web-vitals": "^2.1.4"
   },
